--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.0.0",
-    "@angular/common": "^18.0.0",
+    "@angular/common": "^18.0.5",
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.0.0",
     "@angular/forms": "^18.0.0",
@@ -21,7 +21,12 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.3",
+    "angular-font-awesome": "^3.1.2",
+    "chart.js": "^4.4.3",
+    "chartjs": "^0.3.24",
     "express": "^4.18.2",
+    "font-awesome": "^4.7.0",
+    "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
