--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc",
     "start": "NODE_ENV=production node dist/server.js",
-    "dev": "ts-node-dev src/server.ts",
+    "server": "npm run build && NODE_ENV=development node dist/server.js",
+    "dev": "NODE_ENV=development ts-node-dev src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
