--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "build": "tsc",
     "start": "NODE_ENV=production node dist/server.js",
     "server": "npm run build && node dist/server.js",
-    "dev": "NODE_ENV=development ts-node-dev src/server.ts",
+    "dev": "src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
