--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.3",
     "angular-font-awesome": "^3.1.2",
+    "ngx-cookie-service": "^18.0.0",
     "chart.js": "^4.4.3",
     "chartjs": "^0.3.24",
     "express": "^4.18.2",
