--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm run copy-ejs",
+    "copy-ejs": "copyfiles -u 1 src/**/*.ejs dist",
     "start": "NODE_ENV=production node dist/server.js",
     "server": "npm run build && node dist/server.js",
     "dev": "src/server.ts",
@@ -52,6 +53,7 @@
     "@types/node-schedule": "^2.1.7",
     "@types/nodemailer": "^6.4.15",
     "@types/uuid": "^9.0.8",
+    "copyfiles": "^2.4.1",
     "ts-node-dev": "^2.0.0",
     "tsc-node": "^0.0.3",
     "typescript": "^5.4.5"
