--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "copy-ejs": "copyfiles -u 1 src/**/*.ejs dist",
     "start": "NODE_ENV=production node dist/server.js",
     "server": "npm run build && node dist/server.js",
-    "dev": "src/server.ts",
+    "dev": "ts-node-dev src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -54,6 +54,7 @@
     "@types/nodemailer": "^6.4.15",
     "@types/uuid": "^9.0.8",
     "copyfiles": "^2.4.1",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsc-node": "^0.0.3",
     "typescript": "^5.4.5"
